Update circleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@4.1.0
   # different jobs are calles later in the workflows sections
+  aws-cli: circle/aws-cli@1.3.1
 jobs:
   build:
     docker:
@@ -13,6 +14,20 @@ jobs:
       - checkout
       # install dependencies in both apps
       - run:
-          name: hello
+          name: FE install
           command: |
-            echo "hello-world"
+            npm run frontend:install
+
+      - run:
+          name: BE install
+          command: |
+            npm run backend:install
+
+      - run:
+          name: FE build
+          command: |
+            npm run frontend:build
+       - run:
+          name: BE build
+          command: |
+            npm run backend:build
