--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,8 @@ jobs:
       # the base image can run most needed actions with orbs
       - image: "cimg/base:stable"
     steps:
-      # install dependencies in both apps
+      - node/install
+      - checkout
       - run:
           name: FE install
           command: |
