--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@4.1.0
   # different jobs are calles later in the workflows sections
-  aws-cli: circle/aws-cli@1.3.1
+  aws-cli: circleci/aws-cli@4.1.3
 jobs:
   build:
     docker:
