--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,8 @@
 version: 2.1
 orbs:
-  # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@4.1.0
-  # different jobs are calles later in the workflows sections
   aws-cli: circleci/aws-cli@4.1.3
+  eb: circleci/aws-elastic-beanstalk@2.0.1
 jobs:
   build:
     docker:
@@ -30,3 +29,8 @@ jobs:
           name: BE build
           command: |
             npm run backend:build
+
+      - run:
+          name: Deploy App
+          command: |
+            npm run frontend:deploy
